--- a/src/config.env
+++ b/src/config.env
@@ -1,3 +1,5 @@
 BOT_TOKEN="7153410690:AAEvcZ1IqiZLqKlhFHnfw43FJJrqanR2TiA"
 RELATIONS_MODEL_NAME="smetan/comet-bart-aaai"
-SUMMARIZATION_MODEL_NAME="facebook/bart-large-cnn"
+SUMMARIZATION_MODEL_API_URL="https://api-inference.huggingface.co/models/philschmid/bart-large-cnn-samsum"
+SUMMARIZATION_MODEL_TOKEN="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"
+DEEPL_TOKEN="78df8764-823f-4413-ad66-46aa3f67d63c:fx"
